FR Translation for info message about compressed avatar display

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -3810,8 +3810,8 @@
       <segment>
         <source>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
                                                 um den Bildausschnitt für die komprimierte Anzeige einzustellen.</source>
-        <target>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
-                                                um den Bildausschnitt für die komprimierte Anzeige einzustellen.</target>
+        <target>Ouvrez MyHordes dans une fenêtre plus grande ou sur un périphérique avec un écran plus grand
+                                                pour régler la zone d'affichage compressée.</target>
       </segment>
     </unit>
   </file>
