EN Translation for info message about compressed avatar display

--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -3835,8 +3835,8 @@
       <segment>
         <source>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
                                                 um den Bildausschnitt für die komprimierte Anzeige einzustellen.</source>
-        <target>Öffne MyHordes in einem größeren Fenster oder auf einem Gerät mit einem größeren Bildschirm,
-                                                um den Bildausschnitt für die komprimierte Anzeige einzustellen.</target>
+        <target>Open MyHordes in a larger window or on a device with a larger screen
+                                                to edit the compressed display area.</target>
       </segment>
     </unit>
   </file>
