--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -22087,7 +22087,7 @@
       </notes>
       <segment>
         <source>Dieser Aussätzige wurde kurzerhand &lt;strong&gt;gekreuzigt&lt;/strong&gt;.</source>
-        <target><![CDATA[Dieser Aussätzige wurde kurzerhand <strong>gekreuzigt</strong>.]]></target>
+        <target><![CDATA[Ce paria a été <strong>crucifié</strong> sur votre croix en chocolat à titre d'exemple.]]></target>
       </segment>
     </unit>
     <unit id="xBnA_I0">
@@ -22098,7 +22098,8 @@
       </notes>
       <segment>
         <source>Das Schokoladenkreuz wurde von den Bürgern im Rahmen dieses tragischen Ereignisses &lt;strong&gt;gegessen&lt;/strong&gt;!</source>
-        <target><![CDATA[Das Schokoladenkreuz wurde von den Bürgern im Rahmen dieses tragischen Ereignisses <strong>gegessen</strong>!]]></target>
+        <target><![CDATA[<strong>La croix en chocolat a été dégustée</strong> au cours de
+cette violente opération...]]></target>
       </segment>
     </unit>
     <unit id="IOhU3iU">
