Fixed ES maximum estimation message

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -19369,7 +19369,7 @@
       </notes>
       <segment>
         <source>Das ist die bestmögliche Schätzung, die wir für diesen Angriff abgeben konnten.</source>
-        <target>Esta es la mejor estimación posible que hemos podido obtener para este ataque.</target>
+        <target>Es el mejor cálculo que podemos hacer para este ataque.</target>
       </segment>
     </unit>
     <unit id="rNe.VcD">
