--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -9074,7 +9074,7 @@
       </notes>
       <segment>
         <source>Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</source>
-        <target>Vorsicht, zu viel Musik ist schädlich, und einer deiner Mitbürger hat dieses Instrument heute bereits benutzt. Deine Ohren würden das nicht überleben.</target>
+        <target>Cuidado, la idea tampoco es de hacer una parranda. Otro habitante ya tocó la guitarra hoy. Nadie quiere oír tantos chillidos el mismo día.</target>
       </segment>
     </unit>
     <unit id="VXFJxzy">
